@@ -26,7 +26,7 @@ function run_mkbackup_ssh_remote () {
     REAR_RUN="mkbackup"
   fi
 
-  BKPOUT=$(ssh $SSH_OPTS ${DRLM_USER}@${CLI_NAME} sudo /usr/sbin/rear "$GLOB_OPT" "$REAR_RUN" SERVER=$(hostname -s) REST_OPTS=\"$REST_OPTS\" ID="$CLI_NAME" 2>&1)
+  BKPOUT=$(ssh $SSH_OPTS -p $SSH_PORT ${DRLM_USER}@${CLI_NAME} sudo /usr/sbin/rear "$GLOB_OPT" "$REAR_RUN" SERVER=$(hostname -s) REST_OPTS=\"$REST_OPTS\" ID="$CLI_NAME" 2>&1)
   if [ $? -ne 0 ]; then
     BKPOUT=$( echo $BKPOUT | tr -d "\r" )
     echo "$BKPOUT"
