@@ -14,8 +14,9 @@ drlm (2.4.0) stable release; urgency=high
   * Improved instclient configuration workflow
   * List Unscheduled clients bug fixed
   * Removed unsupported SysVinit service management
+  * SSH_PORT variable independent of SSH_OPTS
 
- -- Pau Roura <pau@brainupdaters.net>  Tue, 23 Feb 2021 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Fri, 19 Mar 2021 00:00:00 +0100
 
 drlm (2.3.2) stable release; urgency=high
   * Fixed wget package dependency (issue #127)
